feat: manage specific route for docs microservice
